; ModuleID = '/home/carl/AnghaBench/git/extr_fast-import.c_parse_from.c'
source_filename = "/home/carl/AnghaBench/git/extr_fast-import.c_parse_from.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.branch = type { i32 }

@command_buf = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@.str = private unnamed_addr constant [6 x i8] c"from \00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.branch*)* @parse_from to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_from(%struct.branch* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.branch*, align 8
  %4 = alloca i8*, align 8
  store %struct.branch* %0, %struct.branch** %3, align 8
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @command_buf, i32 0, i32 0), align 4
  %6 = call i32 @skip_prefix(i32 %5, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8** %4)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %13

9:                                                ; preds = %1
  %10 = load %struct.branch*, %struct.branch** %3, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @parse_objectish(%struct.branch* %10, i8* %11)
  store i32 %12, i32* %2, align 4
  br label %13

13:                                               ; preds = %9, %8
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}

declare dso_local i32 @skip_prefix(i32, i8*, i8**) #1

declare dso_local i32 @parse_objectish(%struct.branch*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
